# 0x3c0-Microkernel

./: .gitignore  LinkScript.ld  README
C library stubs/: Makefile.am  MessageHandlers.c  MessageHandlers.h  Microkernel.h  SystemCalls.c  SystemCalls.h  configure.in  crt0.S  onReceipt.c  onReceipt.h  preMain.c
C library stubs/DataStructures/: Microkernel.h  Processes.h  VFS.h
CommonSourceCode/: List.h  Memory.cpp  Memory.h  Typedefs.h
Drivers/Bootstrap/: LinkScript.ld
Include/: Bitmap.h  LinkedList.h
Include/Boot/: DescriptorTables.h  Multiboot.h
Include/Common/: CPlusPlus.h  Interrupts.h  Ports.h  RandomGenerator.h  Strings.h  Typedefs.h
Include/Drivers/: DriverStructures.h  DriverType.h
Include/ELF/: ELFHeaders.h  ELFLoader.h
Include/IPC/: Message.h  MessageCodes.h  Mutex.h  Semaphore.h  SharedPage.h
Include/MemoryAllocation/: AllocateMemory.h  Physical.h
Include/Multitasking/: MemoryMap.h  Paging.h  Process.h  Scheduler.h  Security.h  SystemCalls.h  Thread.h
Include/SystemCalls/: Native.h  POSIXInterface.h  SystemCalls.h
Source/: Bitmap.cpp
Source/Boot/: Boot.cpp  Boot.s  DescriptorTables.cpp  DescriptorTables.s  IDT.s  KernelStart.s  LongMode.s
Source/Common/: CPlusPlus.cpp  Interrupts.cpp  Ports.cpp  RandomGenerator.cpp  Strings.cpp
Source/Drivers/: DriverStructures.cpp
Source/ELF/: ELFHeaders.cpp  ELFLoader.cpp
Source/IPC/: Message.cpp  Mutex.cpp  Semaphore.cpp
Source/MemoryAllocation/: AllocateMemory.cpp  BootstrapPhysicalStack.cpp  PhysicalAllocator.cpp
Source/Multitasking/: MemoryMap.cpp  Paging.cpp  Paging.s  Process.cpp  (+3 more)
(+6 files in other folders)
